[metadata]
name = openenv-bug-triage-env
version = 1.0.0
description = An AI-driven bug triage simulation environment for the Meta × OpenEnv Hackathon
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/VarshiniGunti/openenv-bug-triage-env
author = Varshini Gunti
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
python_requires = >=3.11
install_requires =
    pydantic>=2.0
    pyyaml>=6.0
    flask>=2.3.0
    scikit-learn>=1.3.0
    numpy>=1.24.0
    requests>=2.31.0

[options.packages.find]
where = .
include = models, tasks, graders, utils
